adhoc: implement new REST API
